# BETpy

./: README.md  pyproject.toml  requirements.txt
BETpy/: bet.py
tests/: bet_test.py  examples.ipynb  run_perf_parallel.py  run_perf_test.py
